# ULTRA

./: .gitignore  ARM_COMPATIBILITY.md  CMakeLists.txt  README.md  instructions.md
Algorithms/CH/: HubLabelExtractor.h
Algorithms/CSA/: CSA.h
Algorithms/Dijkstra/: JumpTripSearch.h  TD-DijkstraStateful.h  TD-DijkstraStatefulBST.h  TD-DijkstraStatefulCST.h  TD-DijkstraStatefulClassic.h  TD-DijkstraStatefulFC.h  TimeDependentDijkstra.h  TimeDependentMCDijkstra.h  TripJumpSearch.h
Algorithms/RAPTOR/: RAPTOR.h
Algorithms/RAPTOR/Bounded/: BoundedMcRAPTOR.h
Algorithms/RAPTOR/ULTRABounded/: ForwardPruningULTRARAPTOR.h
Algorithms/TripBased/Preprocessing/: ReplacementSearchBuilder.h
DataStructures/CSA/: Data.h
DataStructures/Graph/: TimeDependentGraph.h  TimeDependentGraphClassic.h  TimeDependentGraphFC.h  TimeDependentGraphJTS.h
DataStructures/Graph/Classes/: DynamicGraph.h
DataStructures/Graph/Utils/: IO.h
DataStructures/Queries/: Queries.h
DataStructures/RAPTOR/: Data.h
DataStructures/TripBased/: DelayData.h  DelayUpdateData.h
Helpers/: Helpers.h  Meta.h  MultiThreading.h  SIMD.h
Helpers/IO/: ParserCSV.h
Runnables/: InspectTransferTimes.cpp  NonFifoCheck.cpp  ULTRA.cpp
Runnables/Commands/: BenchmarkMcULTRA.h  BenchmarkULTRA.h  CH.h  DelayExperiments.h
